--- a/src/gabrielamontes_examen1p2/Pantalla.form
+++ b/src/gabrielamontes_examen1p2/Pantalla.form
@@ -790,7 +790,7 @@
           <SubComponents>
             <Component class="javax.swing.JButton" name="B_Agregar">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Agregar"/>
+                <Property name="text" type="java.lang.String" value="CRUD"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="B_AgregarActionPerformed"/>
